# poke-ocr

./: .env.example  .gitignore  README.md  handover.md  package.json  pyproject.toml
electron/: main.js
src/codexocr/: __init__.py  catalog.py  config.py  database.py  matcher.py  models.py  normalize.py  obs.py  providers.py  sample_catalog.py  scanner.py  server.py  vision.py
src/codexocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: run_tests.py  test_catalog.py  test_matcher.py  test_normalize.py  test_obs.py  test_pricing.py  test_vision.py
web/: app.css  app.js  control.html  overlay.html  overlay.js
